--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:12.16.1-alpine
+FROM node:12.16.1-alpine as build-stage
 
 RUN mkdir -p /usr/src/app
 
@@ -12,3 +12,9 @@ RUN npm audit fix
 EXPOSE 5000
 
 CMD ["npm", "run", "start"]
+
+# etapa de producción
+# FROM nginx:1.13.12-alpine as production-stage
+# COPY --from=build-stage /usr/src/app /usr/share/nginx/html
+# EXPOSE 5000
+# CMD ["nginx", "-g", "daemon off;"]
