--- a/front/package.json
+++ b/front/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "funciones.js",
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1",
-	"start": "http-server -p 5000"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http-server": "^0.12.1"
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "request": "^2.88.2"
   }
 }
